--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "homepage": "https://github.com/yelsanya/fullstack-hy-part3#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "mongodb": "4.0",
+    "mongoose": "^7.4.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
