--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "mongoose": "^7.4.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.45.0"
   }
 }
